In GOD we trust. All others, bring data.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-Salam World!
+<p><img src="https://upload.wikimedia.org/wikipedia/commons/f/fb/Bismillah_Calligraphy1.svg"></p>
+<p>In the name of ALLAH, The Most Gracious, The Most Merciful</p>
+<br>
+<p>In GOD we trust. All others, bring data.</p>
