--- a/index.html
+++ b/index.html
@@ -1,4 +1,21 @@
-<p><img src="https://upload.wikimedia.org/wikipedia/commons/f/fb/Bismillah_Calligraphy1.svg"></p>
-<p>In the name of ALLAH, The Most Gracious, The Most Merciful</p>
-<br>
-<p>In GOD we trust. All others, bring data.</p>
+<style>
+  div {
+    text-align: center;
+    height: 100%;
+    position: relative;
+  }
+  img {
+    width: 80%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+</style>
+
+<div>
+  <p><img src="https://upload.wikimedia.org/wikipedia/commons/f/fb/Bismillah_Calligraphy1.svg"></p>
+  <p>In the name of ALLAH, The Most Gracious, The Most Merciful</p>
+  <br>
+  <p>In GOD we trust. All others, bring data.</p>
+</div>
