--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <style>
-  div {
+  body {
     text-align: center;
     height: 100%;
     position: relative;
   }
-  img {
-    width: 80%;
+  div {
+    width: 50%;
     position: absolute;
     top: 50%;
     left: 50%;
