Remove defined width

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     position: relative;
   }
   div {
-    width: 50%;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -17,5 +16,5 @@
   <p><img src="https://upload.wikimedia.org/wikipedia/commons/f/fb/Bismillah_Calligraphy1.svg"></p>
   <p>In the name of ALLAH, The Most Gracious, The Most Merciful</p>
   <br>
-  <p>In GOD we trust. All others, bring data.</p>
+  <p>In God we trust. All others, bring data.</p>
 </div>
